get all complaint descriptions
