# swagger.json
@@ -859,6 +859,36 @@
                     }
                 }
             }
+        },
+
+        "/api/complaintcategory/{_id}/descriptions": {
+            "get": {
+                "tags": [
+                    "complaint"
+                ],
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "required": "true",
+                        "description": "Complaint category id",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "645a5e144d0ae5c3ba3c63c6"
+                    }
+                ],
+                "summary": "Get all descriptions af a complaint category",
+                "description": "Get all descriptions af a certain complaint category",
+                "responses": {
+                    "200" : {
+                        "description": "Complaint descriptions retrieved successfully"
+                    },
+                    "500" : {
+                        "$ref": "#/components/responses/ServerError"
+                    }
+                }
+            }
         }
     }
 }
